arches/app/media/css/arches-nifty.css
/* ... */
.alert {
    padding: 15px;
}
.library-card {
    float: left;
    width: 200px;
    height: 58px;
    margin: 0px -7px;
    position: relative;
    padding: 5px;
    color: #666;
    border-bottom: 1px solid #ddd;
    border-right: 1px solid #e9e9e9;
    background: #fdfdfd;
}
.library-card:first-of-type {
    border-top: 1px solid #ddd;
    margin-top: 5px;
}
.selected-card {
    opacity: .9;
    color: #fff;
    background-color: #f1f1f1;
}
.library-card:hover {
    background-color: #f8f8f8;
    cursor: pointer;
}
#branch-library .library-card {
    width: 300px;
}
.library-icon {
    width: 30px;
    position: absolute;
    left: 10px;
    top: 10px;
}
.library-card-main {
    width: 155px;
    position: absolute;
    left: 55px;
    top: 12px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 12px;
}
.library-card-subtitle {
    text-transform: capitalize;
    width: 155px;
    position: absolute;
    left: 55px;
    top: 25px;
    color: #8ba2b9;
    font-size: 11px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 2px 2px 3px 0;
}
.permission-level-icon {
    height: 20px;
    margin-top: -5px;
}
.library-search {
    font-size: 11px;
    height: 32px;
    width: 100%;
}
.key-container {
    position: relative;
    padding-bottom: 15px;
}
.key-icon {
    width: 50px;
}
.key-class {
    position: absolute;
    top: 0;
    left: 50px;
}
.nav-library {
    margin-left: -1px;
    margin-top: 0;
    background: #314151;
    border-left: 1px solid #123;
}
.nav-library-tab {
    color: #eee;
    background: #314151;
    border-width: 0;
}
.nav-library-tab-link {
    height: 59px;
    padding-top: 20px;
    background: transparent;
}
#library .nav-tabs li:not(active) a {
    opacity: 0.9;
    border-radius: 0;
    border: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
    background-color: #314151;
    color: rgba(255, 255, 255, 0.5);
    padding: 20px 0;
}
#library .nav-tabs .active a {
    border-left: 1px solid rgba(0, 0, 0, 0.1);
    border-right: 1px solid rgba(0, 0, 0, 0.1);
    border-bottom: 1px solid transparent;
    background-color: #37495b;
    color: inherit!important;
}
.branch-preview {
    height: 550px;
    width: 280px;
    background: #f1f1f1;
    border: 1px solid #123;
    color: #123;
}
.branch-metadata {
    padding-top: 8px;
}
.branch-icon {
    border: 1px solid rgba(0, 0, 0, 0.25);
}
.branch-icon:hover {
    border: 1px solid rgba(0, 0, 0, 0.25);
    background: #5fa2dd;
}
.clear-selection {
    background: #314151;
    width: 100%;
    height: 21px;
    padding-top: 4px;
    margin-bottom: 0;
    padding-bottom: 0;
    margin-top: 0;
}
.clear-selection-link {
    cursor: pointer;
    font-size: 9px;
    float: right;
    color: #ddd;
}
.node circle {
    fill: #fff;
    stroke: #4682B4;
    stroke-width: 1px;
}
.node {
    font-size: 13px;
    transition: all .40s ease;
}
.node .node-selected {
    fill: #4682B4;
}
.node .node-filtered {
    opacity: .3;
}
.node-text {
    font-size: 10px;
    text-overflow: ellipsis;
}
.link {
    fill: none;
    stroke: #ddd;
    stroke-width: 1.5px;
}
.templink {
    fill: none;
    stroke: red;
    stroke-width: 3px;
}
.node .node-over {
    stroke: navy;
    cursor: pointer;
    transition: all .40s ease;
}
.target-node circle {
    opacity: 0.2;
    fill: red;
    stroke: red;
    stroke-width: 32px;
}
#nodeCrud {
    position: absolute;
    width: 250px;
    left: 300px;
    top: 0;
    bottom: 0;
    color: #fff;
    z-index: 200;
    border-left: 1px solid #1E3143;
    border-right: 1px solid #1E3143;
    -webkit-border-radius: 12px;
    -moz-border-radius: 2px;
    border-radius: 0;
    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
    -moz-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
    padding: 0 10px;
}
.morphsearch {
    width: 200px;
    min-height: 30px;
    background: #f1f1f1;
    position: absolute;
    z-index: 500;
    top: 45px;
    right: 50px;
    -webkit-transform-origin: 100% 0;
    transform-origin: 100% 0;
    -webkit-transition-property: min-height, width, top, right;
    transition-property: min-height, width, top, right;
    -webkit-transition-duration: .5s;
    transition-duration: .5s;
    -webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
    transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
}
.morphsearch.open {
    width: 100%;
    min-height: 100%;
    top: 0;
    right: 0;
}
.morphsearch-form {
    width: 100%;
    height: 30px;
    position: relative;
    -webkit-transition-property: width, height, 0;
    transition-property: width, height, transform;
    -webkit-transition-duration: .5s;
    transition-duration: .5s;
    -webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
    transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
    margin: 0 auto;
}
.morphsearch.open .morphsearch-form {
    width: 80%;
    height: 160px;
    -webkit-transform: translate3d(0, 3em, 0);
    transform: translate3d(0, 3em, 0);
}
.morphsearch-input {
    width: 100%;
    height: 100%;
    border: none;
    background: transparent;
    font-size: 1.2em;
    font-weight: 600;
    color: #123;
    -webkit-transition: font-size .5s cubic-bezier(0.7, 0, 0.3, 1);
    transition: font-size .5s cubic-bezier(0.7, 0, 0.3, 1);
    padding: 0 10% 0 10px;
}
.morphsearch.hideInput .morphsearch-input {
    color: transparent;
    -webkit-transition: color .3s;
    transition: color .3s;
}
.morphsearch.open .morphsearch-input {
    font-size: 7em;
    color: #123;
    font-weight: 400;
}
.gn-search:focus::-webkit-input-placeholder {
    color: transparent;
}
input[type="search"] {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}
.morphsearch-input:focus, .morphsearch-submit:focus {
    outline: none;
}
/* ... */

